--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,15 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
+    // Retrofit & OkHttp
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation("com.google.code.gson:gson:2.9.0")
+
+    // JSON Converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
@@ -67,4 +76,7 @@ dependencies {
 
     //Sliding panel layout
     implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0"
+
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
