--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.android.databinding:viewbinding:4.0.1'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
 
     testImplementation 'junit:junit:4.13.2'
