Added car model and fixed plate visualization to notification, added deletecar fab to carsdetail, added animation to fab in carsdetail

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
 
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.8'
+
+    //Fab
+    implementation 'com.github.clans:fab:1.6.2'
 }
