ÂGeneral revision to layout, added todo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
 
     //Fab
     implementation 'com.github.clans:fab:1.6.2'
+
+    //imageview
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
