--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.android.databinding:viewbinding:4.0.1'
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    implementation 'androidx.test.espresso:espresso-contrib:3.5.0'
 
-
+    testImplementation 'org.mockito:mockito-core:2.24.5'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'org.mockito:mockito-android:2.24.5'
+    debugImplementation 'androidx.fragment:fragment-testing:1.5.3'
 
     // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
